# quantum-harmony

./: .clang-format  .gitignore  .gitmodules  10_valid_palindrome.cpp  11_reverse_ll.cpp  12_middle_ll.cpp  13_Palindrome_linkedlist.cpp  14_fruit_basket.cpp  15_max_prefix_score.cpp  16_first_bad.cpp  17_search_rotated_array.cpp  18_search_rotated_array_duplicate.cpp  19_letter_combination.cpp  1_pairs.cpp  20_permutations.cpp  21_merge_sorted_arrays.cpp  22_kth_largest.cpp  23_combination_sum.cpp  24_mergeSort.cpp  25_heap.cpp  26_node.cpp  2_revese_to_make_equal.cpp  3_passing_yearbooks.py  4_contigious_subarrays.py  5_matching_pairs.py  6_valid_parenthesis.py  7_min_window_substring.py  8_merge_two_ll.py  9_merge_k_ll.py  CMakeLists.txt  CMakeLists.txt.bak  Makefile  PreLoad.cmake  README.md  _config.yml  addCRCtoBin.py  addRandomBytestoFile.py  boot_info.mk  bootinfo_and_postbuild.cpp  bridge.c  (+35 more)
cmake/: PreventInSourceBuilds.cmake  arm-gcc-toolchain.cmake  mingw-gcc-toolchain.cmake
config_files/: CMakeLists.txt  config.h.in
custom/aepl/adapter/: CMakeLists.txt
docs/doxygen/: Doxyfile
hexdump/: hexdump.c  hexdump.h
include/: bn_logger.h  hexdump.h
src/: hexdump.c  logger.c
test/: CMakeLists.txt  serial_test_2g.py  test1.c  test2.c  test3.cc  test4.cpp
